--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "task-consist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nikhar1988.github.io/Consist-task/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -22,9 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy":"gh-pages -d build",
-    "predeploy": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
